# BattlePong

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  pong_client.cpp  pong_common.h  pong_server.cpp  stdafx.h  version.cpp
py/: __init__.py  __main__.py  common.py  pong_client.py  pong_common.py  pong_server.py  renderer.py  renderer_basic.py  renderer_opengl.py  requirements.txt  setup.py
